[package]
name = "KV_Cache"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
chrono = "0.4"
url = "2.4"
sysinfo = "0.29"
actix-web = "4.0"
linked-hash-map = "0.5.6"
